# aiogram-template

./: .dockerignore  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
routers/: __init__.py  click.py
routers/admin_panel/: menu.py
src/: config.py  main.py
src/bot/: Dockerfile  database.db  main.py
src/bot/database/: __init__.py  database.py
src/bot/database/crud/: admins.py  users.py
src/bot/database/models/: __init__.py  admin.py  base.py  user.py  welcome_messages.py
src/bot/filters/: admin.py
src/bot/markup/admin/: __init__.py  callbacks.py  data.py  keyboard.py  keyboards.py  texts.py
src/bot/markup/client/: __init__.py  keyboards.py
src/bot/markup/common/: keyboards.py
src/bot/middleware/stat/: stat.py
src/bot/routers/: __init__.py
src/bot/routers/admin/: mailing.py  menu.py  stats.py
src/bot/routers/client/main_menu/: main_menu.py
src/bot/routers/debug/: get_state.py  states_data.py
src/bot/states/admin/: __init__.py  main_menu.py
src/bot/states/client/: __init__.py  main_menu.py
src/routers/admin/sub_menu/: sub_menu.py
src/routers/client/main_menu/: main_menu.py
tests/: test_main.py
