[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiogram-template"
dynamic = ["version"]
description = 'Aiogram template'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Karimullin Arthur", email = "KarimullinArthur@disroot.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Karimullin Arthur/aiogram-template#readme"
Issues = "https://github.com/Karimullin Arthur/aiogram-template/issues"
Source = "https://github.com/Karimullin Arthur/aiogram-template"

[tool.hatch.version]
path = "src/aiogram_template/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/aiogram_template tests}"

[tool.coverage.run]
source_pkgs = ["aiogram_template", "tests"]
branch = true
parallel = true
omit = [
  "src/aiogram_template/__about__.py",
]

[tool.coverage.paths]
aiogram_template = ["src/aiogram_template", "*/aiogram-template/src/aiogram_template"]
tests = ["tests", "*/aiogram-template/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
