[tool.poetry]
name = "aiogram-template"
version = "0.0.1"
description = ""
authors = ["Karimullin Arthur <KarimullinArthur@disroot.org>"]
#readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.17.0"
pydantic-settings = "^2.7.1"
sqlalchemy = "^2.0.38"
aiosqlite = "^0.21.0"


[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.tox]
env_list = ["lint", "py313", "py312", "py311"]

[tool.tox.env_run_base]
description = "run unit tests"
deps = [
    "pytest>=8",
#    "pytest-sugar",
]
commands = [
#     ["pytest", { replace = "posargs", default = ["tests"], extend = true }]
    ["pytest"]
]

[tool.tox.env_lint]
description = "run linters"
skip_install = true
deps = ["ruff"]
commands = ["ruff format ."]

[tool.tox.env_type]
description = "run type checks"
deps = ["mypy"]
commands = [
    ["mypy", { replace = "posargs", default = ["src", "tests"], extend = true }]
]
